0022627: Change OCCT memory management defaults